# competition-format-service

./: .flake8  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  specification.yaml
.github/workflows/: deploy_webserver.yml  test.yml
app/: main.py
app/adapters/: __init__.py  competition_formats_adapter.py  liveness_adapter.py
app/authorization/: __init__.py  authorization.py
app/models/: __init__.py  competition_format_model.py
app/routers/: __init__.py  competition_formats.py  ping.py  ready.py
app/services/: competition_formats_service.py
competition_format_service/: app.py  gunicorn_config.py
competition_format_service/adapters/: __init__.py  adapter.py  competition_formats_adapter.py  users_adapter.py
competition_format_service/models/: __init__.py  competition_format_model.py
competition_format_service/services/: __init__.py  competition_formats_service.py  exceptions.py
competition_format_service/views/: __init__.py  competition_formats.py  liveness.py
scripts/: README.md  load_competition_formats.py
scripts/files/: competition_formats.json
tests/: conftest.py
tests/contract/: test_competition_formats.py
tests/files/: competition_format_individual_sprint.json  competition_format_individual_sprint_multiple_finals_1.json  competition_format_individual_sprint_multiple_finals_2.json  competition_format_interval_start.json
tests/integration/: test_competition_formats.py  test_ping.py  test_ready.py
tests/unit/: test_competition_format_service.py
